--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-
-    <title>Document</title>
-
+    <script src="script.js" defer></script>
+    <title>Hoverboard</title>
 </head>
+<div class="container" id="container">
+
+</div>
+
 
 <body>
 
